<resources>
    <string name="app_name">Pestanias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_mssg_one">Mensaje</string>
    <string name="saludo">Bienvenidos</string>
    <string name="mensaje">Que la vida iba en serio uno lo empieza a comprender más tarde como todos los jóvenes, yo vine a llevarme la vida por delante. Dejar huella quería y marcharme entre aplausos envejecer, morir, era tan sólo las dimensiones del teatro. Pero ha pasado el tiempo y la verdad desagradable asoma: envejecer, morir, es el único argumento de la obra.</string>
    <string name="titleAgenda">Agenda</string>
    <string name="imagen">Imagen</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="tabOne">HOME</string>
    <string name="tabTwo">SCHEDULE</string>
    <string name="tabThree">GALLERY</string>
    <string name="tabFour">SLIDESHOW</string>
</resources>