<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFBFBF"
    tools:context=".ScheduleFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/titleAgenda"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="serif-monospace"
            android:textSize="40sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:text="@string/imagen"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="300px"
                android:layout_height="250px"
                android:src="@drawable/woman"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="Maria Lourdes Esquivel"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="5598741236"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="maria@hotmail.com"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="300px"
                android:layout_height="250px"
                android:layout_marginTop="10dp"
                android:src="@drawable/man_one"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="Juan Lopez Echeverria"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="5599884466"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="juan@hotmail.com"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="300px"
                android:layout_height="250px"
                android:src="@drawable/man_ttwo"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="Jorge Carera Perez"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="5544816298"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="jorge@hotmail.com"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="300px"
                android:layout_height="250px"
                android:src="@drawable/man_three"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="Carlos Ramirez Pineda"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="554719296"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="250px"
                android:layout_height="250px"
                android:text="carlos@hotmail.com"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>